@@ -1,7 +1,7 @@
 <?php
 	function get_login_by_email($email)
 	{
-		$query = "SELECT * FROM `users` WHERE `email`='" . mysql_real_escape_string($email) . "' LIMIT 1";
+		$query = "SELECT * FROM `users` WHERE `email`='" . mysql_escape_string($email) . "' LIMIT 1";
 		$result = mysql_query($query);
 		$line = mysql_fetch_assoc($result);
 		mysql_free_result($result);
@@ -19,7 +19,7 @@ echo($query);
 	function create_account($name, $password, $email)
 	{
 		$expire = time() + 386 * 24 * 60 * 60;
-		$query = "INSERT INTO `users` (`name`, `email`, `passwd`, `expire`) VALUES ('" . mysql_real_escape_string($name) . "', '" . mysql_real_escape_string($email) . "', PASSWORD('" . mysql_real_escape_string($password) . "'), '$expire')";
+		$query = "INSERT INTO `users` (`name`, `email`, `passwd`, `expire`) VALUES ('" . mysql_escape_string($name) . "', '" . mysql_escape_string($email) . "', PASSWORD('" . mysql_escape_string($password) . "'), '$expire')";
 
 		if (!mysql_query($query))
 			return FALSE;
